# PaperGraph

./: .gitignore  CMakeLists.txt  README.md
inc/glm/detail/: dummy.cpp  type_half.inl
shaders/: standard.frag  standard.vert
shapes/: Box.cpp  Box.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
src/: main.cpp
util/: ShaderProgram.cpp  ShaderProgram.h  const.h  util.cpp  util.h
